--- a/stories/index.html
+++ b/stories/index.html
@@ -2729,6 +2729,12 @@
       <td><a name="ja0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0030</td>
+      <td><a href="/stories/ja/0030_いろんな気持ち_slides.html" target="_blank">いろんな気持ち</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0052</td>
       <td><a href="/stories/ja/0052_シンベグウィレ_slides.html" target="_blank">シンベグウィレ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2805,6 +2811,12 @@
       <td><a href="/stories/ja/0201_ロバの子_slides.html" target="_blank">ロバの子</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td><a href="/stories/ja/0210_ティンギと牛たち_slides.html" target="_blank">ティンギと牛たち</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -6351,7 +6363,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ja0030">ja</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -6663,7 +6675,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#bn0210">bn</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#nb0210">nb</a>, <a href="#nn0210">nn</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#bn0210">bn</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ja0210">ja</a>, <a href="#ko0210">ko</a>, <a href="#nb0210">nb</a>, <a href="#nn0210">nn</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
