--- a/stories/index.html
+++ b/stories/index.html
@@ -2729,6 +2729,12 @@
       <td><a name="ja0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/ja/0027_決意_slides.html" target="_blank">決意</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/ja/0030_いろんな気持ち_slides.html" target="_blank">いろんな気持ち</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2777,6 +2783,12 @@
       <td><a name="ja0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0112</td>
+      <td><a href="/stories/ja/0112_僕の体_slides.html" target="_blank">僕の体</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0120</td>
       <td><a href="/stories/ja/0120_髪_slides.html" target="_blank">髪</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2787,6 +2799,12 @@
       <td><a href="/stories/ja/0127_遊びの動作_slides.html" target="_blank">遊びの動作</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/ja/0129_働かない弟_slides.html" target="_blank">働かない弟</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0139</td>
@@ -2831,6 +2849,12 @@
       <td><a name="ja0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0271</td>
+      <td><a href="/stories/ja/0271_二つ_slides.html" target="_blank">二つ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0291</td>
       <td><a href="/stories/ja/0291_ブーシーのお姉さんが言ったこと_slides.html" target="_blank">ブーシーのお姉さんが言ったこと</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2841,6 +2865,12 @@
       <td><a href="/stories/ja/0294_おばあちゃんのバナナ_slides.html" target="_blank">おばあちゃんのバナナ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/ja/0302_火_slides.html" target="_blank">火</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0315</td>
@@ -6357,7 +6387,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ja0027">ja</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -6513,7 +6543,7 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -6555,7 +6585,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#it0129">it</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -6759,7 +6789,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#it0271">it</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -6801,7 +6831,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
