--- a/stories/ja/0052_シンベグウィレ_slides.html
+++ b/stories/ja/0052_シンベグウィレ_slides.html
@@ -170,7 +170,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
 <p>夜になって、シンベグウィレは川のほとりの高い木にのぼって、枝の間に寝床をつくりました。 そして、寝るときにこんな歌をうたいました。</p>
-<p>おかあさーん おかあさーん おかあさんがおいてった わたしをおいて行っちゃった おとうさんは好きじゃない もう、わたしのことが好きじゃない おかあさんは、いつ帰る？ おかあさんがおいてった</p>
+<p>おかあさーん おかあさーん おかあさんがおいてった 私をおいて行っちゃった おとうさんは好きじゃない もう、私のことが好きじゃない おかあさんは、いつ帰る？ おかあさんがおいてった</p>
 <center>
 <strong>9</strong>
 </center>
@@ -206,7 +206,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>シンベグウィレのお父さんが家に帰ると、シンベグウィレがいないことに気づきました。「アニータ、何があったんだ？」お父さんは暗い気持ちで聞きました。アニータはシンベグウィレが逃げ出した時のことを話しました。「シンベグウィレにみとめてもらいたかったの。でもきっと、わたしがきつくあたりすぎたんだわ･･･」お父さんは家を出ると、川のほうへ歩いてから、お姉さんの住む村に向かいました。シンベグウィレを見かけていないか、お姉さんに確かめるためでした。</p>
+<p>シンベグウィレのお父さんが家に帰ると、シンベグウィレがいないことに気づきました。「アニータ、何があったんだ？」お父さんは暗い気持ちで聞きました。アニータはシンベグウィレが逃げ出した時のことを話しました。「シンベグウィレにみとめてもらいたかったの。でもきっと、私がきつくあたりすぎたんだわ･･･」お父さんは家を出ると、川のほうへ歩いてから、お姉さんの住む村に向かいました。シンベグウィレを見かけていないか、お姉さんに確かめるためでした。</p>
 <center>
 <strong>13</strong>
 </center>
@@ -215,7 +215,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p>シンベグウィレがいとこたちと遊んでいるときでした。遠くにお父さんの姿を見つけたシンベグウィレは、お父さんが怒っているんじゃないかと怖くなって、おばさんの家の中に急いで隠れてしまいました。けれども、近くまでやってきたお父さんはこう言いました。「シンベグウィレ、お母さんにぴったりな人を自分で探し出したんだね。シンベグウィレのことが大好きで、しかもわかってくれる人だもんね。ぼくはそんなすごい娘がいてくれて幸せだし、父さんだってシンベグウィレのことが大好きなんだよ」お父さんとはなして、シンベグウィレは好きなだけおばさんの家にいられることになりました。</p>
+<p>シンベグウィレがいとこたちと遊んでいるときでした。遠くにお父さんの姿を見つけたシンベグウィレは、お父さんが怒っているんじゃないかと怖くなって、おばさんの家の中に急いで隠れてしまいました。けれども、近くまでやってきたお父さんはこう言いました。「シンベグウィレ、お母さんにぴったりな人を自分で探し出したんだね。シンベグウィレのことが大好きで、しかもわかってくれる人だもんね。僕はそんなすごい娘がいてくれて幸せだし、父さんだってシンベグウィレのことが大好きなんだよ」お父さんとはなして、シンベグウィレは好きなだけおばさんの家にいられることになりました。</p>
 <center>
 <strong>14</strong>
 </center>
@@ -224,7 +224,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>お父さんは毎日シンベグウィレに会いに来ました。ある日、アニータが一緒にやってきて、シンベグウィレの手を握ろうと手を差し出しました。 「本当に、本当にごめんなさい。わたしが悪かったの」こう言って、アニータは泣いていました。「もう一度、一緒に暮らすためにがんばってみてもいい？」シンベグウィレは心配そうなお父さんの顔を見上げてから、ゆっくりと一歩踏み出すと、アニータに抱きついたのでした。</p>
+<p>お父さんは毎日シンベグウィレに会いに来ました。ある日、アニータが一緒にやってきて、シンベグウィレの手を握ろうと手を差し出しました。 「本当に、本当にごめんなさい。私が悪かったの」こう言って、アニータは泣いていました。「もう一度、一緒に暮らすためにがんばってみてもいい？」シンベグウィレは心配そうなお父さんの顔を見上げてから、ゆっくりと一歩踏み出すと、アニータに抱きついたのでした。</p>
 <center>
 <strong>15</strong>
 </center>
