--- a/stories/ja/0271_二つ_slides.html
+++ b/stories/ja/0271_二つ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>お仕置き - Global African Storybook</title>
+  <title>二つ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="お仕置き" class="slide level1">
-<h1>お仕置き</h1>
+<section id="二つ" class="slide level1">
+<h1>二つ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>ある日、お母さんは、果物をたくさん手に入れました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
+<p>握るための二つの小さな手</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>「私たち、いつ果物を食べられるの？」と尋ねると、お母さんは「今夜にでも食べましょう」と言いました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>お兄ちゃんのラヒームは、食いしんぼう。全ての果物を味見して、たくさん食べてしまいます。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
+<p>蹴るための二つの小さな足</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>「ほら見て、ラヒームったら！」弟が叫んでいます。「ラヒームはお行儀が悪くて、わがままなのよ」と私は言いました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>お母さんは、ラヒームのことを怒っています。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
+<p>見るための二つの小さな目</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>私たちもラヒームに腹を立てています。でも、ラヒームは自分のしたことを悪いと思っていません。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +147,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>「ラヒームにお仕置きをしないの？」弟は、お母さんに尋ねました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
+<p>聞くための二つの小さな耳</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +156,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>「ラヒーム、もうすぐ自分のしたことを後悔するわよ」とお母さんは、言い聞かせました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +164,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>ラヒームは、気持ちが悪くなり始めます。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
+<p>そして抱きしめるための二つの愛情に満ちた腕！</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +173,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>「おなかがとても痛いよ」と小さな声でささやきました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,36 +181,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>お母さんは、こうなることがわかっていました。果物は、ラヒームにお仕置きをしているのです！</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>その後、ラヒームはみんなに謝りました。「僕はもう二度と欲張ったりしないよ」と約束し、みんなもラヒームを信じることにしました。</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="お仕置き-1">お仕置き</h2>
-<strong>作:</strong> Adelheid Marie Bwire<br> <strong>絵:</strong> Melany Pietersen<br> <strong>訳:</strong> Noriko Shibata<br> <strong>言語:</strong> 日本語<br>
+<h2 id="二つ-1">二つ</h2>
+<strong>作:</strong> Carole Bloch<br> <strong>絵:</strong> Richard MacIntosh<br> <strong>訳:</strong> Satomi I<br> <strong>言語:</strong> 日本語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/punishment'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/two'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
