--- a/stories/ja/0329_怠け者のアナンシ.html
+++ b/stories/ja/0329_怠け者のアナンシ.html
@@ -63,21 +63,21 @@ Ghanaian folktale<br>日本語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/04.jpg" /></p>
 
-<p>すると、うさぎさんが「野菜ができたら呼ぼうか？」とアナンシに聞きました。そこでアナンシは少し考え、こういいました。「クモの糸を使うよ。クモの糸の片方をぼくの足にむすんで、もう片方をきみのおなべにむすぶんだ。野菜ができたら、糸をひっぱってぼくに知らせて。そうしたらすぐにくるからさ」。そしてアナンシはクモの糸をおなべにくくりつけ、歩いていきました。</p>
+<p>すると、うさぎさんが「野菜ができたら呼ぼうか？」とアナンシに聞きました。そこでアナンシは少し考え、こういいました。「クモの糸を使うよ。クモの糸の片方を僕の足にむすんで、もう片方をきみのおなべにむすぶんだ。野菜ができたら、糸をひっぱって僕に知らせて。そうしたらすぐにくるからさ」。そしてアナンシはクモの糸をおなべにくくりつけ、歩いていきました。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/05.jpg" /></p>
 
-<p>つぎに、アナンシは豆を煮ていたおさるさんたちに会いました。「もうすぐ豆ができるんだ。一緒に食べようよ！」とおさるさんは言いました。アナンシは「ごめんね、やることがあるんだ。クモの糸の片方をぼくの足に、もう片方をきみたちのおなべにむすんでもいいかい？豆ができたら、糸をひっぱってぼくに知らせてよ。そうしたらくるからさ」。</p>
+<p>つぎに、アナンシは豆を煮ていたおさるさんたちに会いました。「もうすぐ豆ができるんだ。一緒に食べようよ！」とおさるさんは言いました。アナンシは「ごめんね、やることがあるんだ。クモの糸の片方を僕の足に、もう片方をきみたちのおなべにむすんでもいいかい？豆ができたら、糸をひっぱって僕に知らせてよ。そうしたらくるからさ」。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/06.jpg" /></p>
 
-<p>アナンシがイボイノシシさんの家のそばを通りかかったとき、サツマイモのいいにおいがしてきました。イボイノシシさんはアナンシに言いました。「たくさんのサツマイモと蜂蜜を作ったから、一緒に食べようよ。このフォークでかきまぜるのを手伝ってくれない？」。アナンシは答えました。「あとでもどってくるよ。クモの糸の片方をぼくの足に、もう片方をきみのおなべにむすんでもいいかい？サツマイモができたら、糸をひっぱってぼくに知らせてよ。そうしたらくるからさ」。</p>
+<p>アナンシがイボイノシシさんの家のそばを通りかかったとき、サツマイモのいいにおいがしてきました。イボイノシシさんはアナンシに言いました。「たくさんのサツマイモと蜂蜜を作ったから、一緒に食べようよ。このフォークでかきまぜるのを手伝ってくれない？」。アナンシは答えました。「あとでもどってくるよ。クモの糸の片方を僕の足に、もう片方をきみのおなべにむすんでもいいかい？サツマイモができたら、糸をひっぱって僕に知らせてよ。そうしたらくるからさ」。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
