--- a/stories/ja/0342_お仕置き.html
+++ b/stories/ja/0342_お仕置き.html
@@ -56,7 +56,7 @@ Adelheid Marie Bwire<br>日本語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>「わたしたち、いつ果物を食べられるの？」と尋ねると、お母さんは「今夜にでも食べましょう」と言いました。</p>
+<p>「私たち、いつ果物を食べられるの？」と尋ねると、お母さんは「今夜にでも食べましょう」と言いました。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
