--- a/stories/ja/0027_決意_slides.html
+++ b/stories/ja/0027_決意_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>お仕置き - Global African Storybook</title>
+  <title>決意 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="お仕置き" class="slide level1">
-<h1>お仕置き</h1>
+<section id="決意" class="slide level1">
+<h1>決意</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>ある日、お母さんは、果物をたくさん手に入れました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
+<p>私の村はたくさんの問題をかかえていました。私たちは一つの蛇口から水を汲んでくるのに長い列をつくりました。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>「私たち、いつ果物を食べられるの？」と尋ねると、お母さんは「今夜にでも食べましょう」と言いました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
+<p>私たちは他人が寄付してくれる食べ物を待ちました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>お兄ちゃんのラヒームは、食いしんぼう。全ての果物を味見して、たくさん食べてしまいます。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
+<p>私たちは泥棒のために早くに家の戸締りをしました。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>「ほら見て、ラヒームったら！」弟が叫んでいます。「ラヒームはお行儀が悪くて、わがままなのよ」と私は言いました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
+<p>たくさんの子どもたちは中途で学校をやめてしまいました。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>お母さんは、ラヒームのことを怒っています。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
+<p>少女たちは他の村でメイドとして働きました。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>私たちもラヒームに腹を立てています。でも、ラヒームは自分のしたことを悪いと思っていません。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
+<p>少年たちは他の人たちが農場で働く間、村中をぶらつきました。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>「ラヒームにお仕置きをしないの？」弟は、お母さんに尋ねました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
+<p>風が吹くと、ぼろ紙くずが木々やフェンスに引っかかっていました。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>「ラヒーム、もうすぐ自分のしたことを後悔するわよ」とお母さんは、言い聞かせました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
+<p>人々はぞんざいに捨てられた割れガラスで切り傷ができました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>ラヒームは、気持ちが悪くなり始めます。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
+<p>そしてある日、蛇口が干上がり私たちの水入れは空っぽになりました。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>「おなかがとても痛いよ」と小さな声でささやきました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
+<p>私のお父さんは村の会議に出席するよう人々に頼みながら、家から家へと歩きました。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>お母さんは、こうなることがわかっていました。果物は、ラヒームにお仕置きをしているのです！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
+<p>人々は大きな木の下に集まり聞き入りました。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>その後、ラヒームはみんなに謝りました。「僕はもう二度と欲張ったりしないよ」と約束し、みんなもラヒームを信じることにしました。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
+<p>私のお父さんは立ち上がって「我々は我々の問題を解決するために協力し合う必要があるのです」と言いました。</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,12 +204,48 @@
 </section>
 <section class="slide level1">
 
-<h2 id="お仕置き-1">お仕置き</h2>
-<strong>作:</strong> Adelheid Marie Bwire<br> <strong>絵:</strong> Melany Pietersen<br> <strong>訳:</strong> Noriko Shibata<br> <strong>言語:</strong> 日本語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
+<p>木の幹に座っていた8歳のジュマが「僕、お掃除手伝えるよ」と叫びました。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
+<p>一人の女性が「女たちは食物の栽培を私と一緒にできるわ」と言いました。</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
+<p>もう一人の男性が立ち上がって「男たちは井戸を掘ろう」と言いました。</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
+<p>私たち全員が声をそろえて「私たちは私たちの生活を変えなければならないのだ」と叫びました。その日から私たちは私たちの問題を解決するために、みんなでともに取り組むようになったのです。</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="決意-1">決意</h2>
+<strong>作:</strong> Ursula Nafula<br> <strong>絵:</strong> Vusi Malindi<br> <strong>訳:</strong> Naoko Tanaka<br> <strong>言語:</strong> 日本語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/punishment'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/decision'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
