--- a/stories/ja/0052_シンベグウィレ.html
+++ b/stories/ja/0052_シンベグウィレ.html
@@ -118,9 +118,9 @@ Rukia Nantale<br>日本語</div><div class="pagebreak">
 <p>おかあさーん
 おかあさーん
 おかあさんがおいてった
-わたしをおいて行っちゃった
+私をおいて行っちゃった
 おとうさんは好きじゃない
-もう、わたしのことが好きじゃない
+もう、私のことが好きじゃない
 おかあさんは、いつ帰る？
 おかあさんがおいてった</p>
 
@@ -156,14 +156,14 @@ Rukia Nantale<br>日本語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
 
-<p>シンベグウィレのお父さんが家に帰ると、シンベグウィレがいないことに気づきました。「アニータ、何があったんだ？」お父さんは暗い気持ちで聞きました。アニータはシンベグウィレが逃げ出した時のことを話しました。「シンベグウィレにみとめてもらいたかったの。でもきっと、わたしがきつくあたりすぎたんだわ･･･」お父さんは家を出ると、川のほうへ歩いてから、お姉さんの住む村に向かいました。シンベグウィレを見かけていないか、お姉さんに確かめるためでした。</p>
+<p>シンベグウィレのお父さんが家に帰ると、シンベグウィレがいないことに気づきました。「アニータ、何があったんだ？」お父さんは暗い気持ちで聞きました。アニータはシンベグウィレが逃げ出した時のことを話しました。「シンベグウィレにみとめてもらいたかったの。でもきっと、私がきつくあたりすぎたんだわ･･･」お父さんは家を出ると、川のほうへ歩いてから、お姉さんの住む村に向かいました。シンベグウィレを見かけていないか、お姉さんに確かめるためでした。</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
 
-<p>シンベグウィレがいとこたちと遊んでいるときでした。遠くにお父さんの姿を見つけたシンベグウィレは、お父さんが怒っているんじゃないかと怖くなって、おばさんの家の中に急いで隠れてしまいました。けれども、近くまでやってきたお父さんはこう言いました。「シンベグウィレ、お母さんにぴったりな人を自分で探し出したんだね。シンベグウィレのことが大好きで、しかもわかってくれる人だもんね。ぼくはそんなすごい娘がいてくれて幸せだし、父さんだってシンベグウィレのことが大好きなんだよ」お父さんとはなして、シンベグウィレは好きなだけおばさんの家にいられることになりました。</p>
+<p>シンベグウィレがいとこたちと遊んでいるときでした。遠くにお父さんの姿を見つけたシンベグウィレは、お父さんが怒っているんじゃないかと怖くなって、おばさんの家の中に急いで隠れてしまいました。けれども、近くまでやってきたお父さんはこう言いました。「シンベグウィレ、お母さんにぴったりな人を自分で探し出したんだね。シンベグウィレのことが大好きで、しかもわかってくれる人だもんね。僕はそんなすごい娘がいてくれて幸せだし、父さんだってシンベグウィレのことが大好きなんだよ」お父さんとはなして、シンベグウィレは好きなだけおばさんの家にいられることになりました。</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
@@ -171,7 +171,7 @@ Rukia Nantale<br>日本語</div><div class="pagebreak">
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
 <p>お父さんは毎日シンベグウィレに会いに来ました。ある日、アニータが一緒にやってきて、シンベグウィレの手を握ろうと手を差し出しました。
-「本当に、本当にごめんなさい。わたしが悪かったの」こう言って、アニータは泣いていました。「もう一度、一緒に暮らすためにがんばってみてもいい？」シンベグウィレは心配そうなお父さんの顔を見上げてから、ゆっくりと一歩踏み出すと、アニータに抱きついたのでした。</p>
+「本当に、本当にごめんなさい。私が悪かったの」こう言って、アニータは泣いていました。「もう一度、一緒に暮らすためにがんばってみてもいい？」シンベグウィレは心配そうなお父さんの顔を見上げてから、ゆっくりと一歩踏み出すと、アニータに抱きついたのでした。</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
