--- a/stories/index.html
+++ b/stories/index.html
@@ -2759,6 +2759,12 @@
       <td><a name="ja0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/ja/0072_ミツオシエの仕返し_slides.html" target="_blank">ミツオシエの仕返し</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/ja/0087_本を読むのが好き_slides.html" target="_blank">本を読むのが好き！</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2823,6 +2829,12 @@
       <td><a href="/stories/ja/0156_はらぺこのワニ_slides.html" target="_blank">はらぺこのワニ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/ja/0158_メンドリとワシ_slides.html" target="_blank">メンドリとワシ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0201</td>
@@ -6453,7 +6465,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#bn0072">bn</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#nb0072">nb</a>, <a href="#nn0072">nn</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#bn0072">bn</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ja0072">ja</a>, <a href="#ko0072">ko</a>, <a href="#nb0072">nb</a>, <a href="#nn0072">nn</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -6645,7 +6657,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#de0158">de</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#nb0158">nb</a>, <a href="#nn0158">nn</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#de0158">de</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ja0158">ja</a>, <a href="#ko0158">ko</a>, <a href="#nb0158">nb</a>, <a href="#nn0158">nn</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
