--- a/stories/index.html
+++ b/stories/index.html
@@ -82,6 +82,7 @@
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
 <li class="toc"><a href="#gujarati">Gujarati [ગુજરાતી]</a></li><br>
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
+<li class="toc"><a href="#hungarian">Hungarian [Magyar]</a></li><br>
 <li class="toc"><a href="#indonesian">Indonesian [Bahasa Indonesia]</a></li><br>
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
@@ -2361,6 +2362,57 @@
       <td><a href="/stories/hi/0360_बिल्लीयो-की-गिनती-करना_slides.html" target="_blank">बिल्लीयो की गिनती करना</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hi0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='hungarian'>Hungarian [Magyar]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0001</td>
+      <td><a href="/stories/hu/0001_a-nagyon-magas-ember_slides.html" target="_blank">A nagyon magas ember</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0003</td>
+      <td><a href="/stories/hu/0003_iskolai-ruhák_slides.html" target="_blank">Iskolai ruhák</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/hu/0009_hol-van-a-cicám_slides.html" target="_blank">Hol van a cicám?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/hu/0030_érzések_slides.html" target="_blank">Érzések</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/hu/0231_az-időjárás_slides.html" target="_blank">Az időjárás</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/hu/0302_a-tűz_slides.html" target="_blank">A tűz</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6333,7 +6385,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#bn0001">bn</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nb0001">nb</a>, <a href="#nn0001">nn</a>, <a href="#pa0001">pa</a>, <a href="#pl0001">pl</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#ur0001">ur</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#bn0001">bn</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#hu0001">hu</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nb0001">nb</a>, <a href="#nn0001">nn</a>, <a href="#pa0001">pa</a>, <a href="#pl0001">pl</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#ur0001">ur</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -6345,7 +6397,7 @@
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#hu0003">hu</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -6375,7 +6427,7 @@
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#bn0009">bn</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nb0009">nb</a>, <a href="#nn0009">nn</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#bn0009">bn</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#hu0009">hu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nb0009">nb</a>, <a href="#nn0009">nn</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -6405,7 +6457,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ja0030">ja</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#hu0030">hu</a>, <a href="#it0030">it</a>, <a href="#ja0030">ja</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -6753,7 +6805,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ja0231">ja</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#hu0231">hu</a>, <a href="#it0231">it</a>, <a href="#ja0231">ja</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
@@ -6843,7 +6895,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hu0302">hu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
