--- a/stories/index.html
+++ b/stories/index.html
@@ -2391,6 +2391,12 @@
       <td><a name="hu0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/hu/0004_a-kecske-a-kutya-és-a-tehén_slides.html" target="_blank">A kecske, a kutya és a tehén</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0009</td>
       <td><a href="/stories/hu/0009_hol-van-a-cicám_slides.html" target="_blank">Hol van a cicám?</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2401,6 +2407,18 @@
       <td><a href="/stories/hu/0030_érzések_slides.html" target="_blank">Érzések</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/hu/0067_főzés_slides.html" target="_blank">Főzés</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/hu/0112_a-testem_slides.html" target="_blank">A testem</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -6403,7 +6421,7 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog, and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#nb0004">nb</a>, <a href="#nn0004">nn</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#hu0004">hu</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#nb0004">nb</a>, <a href="#nn0004">nn</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -6505,7 +6523,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#hu0067">hu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -6607,7 +6625,7 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#hu0112">hu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
