--- a/stories/index.html
+++ b/stories/index.html
@@ -2397,6 +2397,12 @@
       <td><a name="hu0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0008</td>
+      <td><a href="/stories/hu/0008_mit-csinálsz_slides.html" target="_blank">Mit csinálsz?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0009</td>
       <td><a href="/stories/hu/0009_hol-van-a-cicám_slides.html" target="_blank">Hol van a cicám?</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2415,10 +2421,28 @@
       <td><a name="hu0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td><a href="/stories/hu/0087_szeretnék-olvasni_slides.html" target="_blank">Szeretnék olvasni!</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/hu/0112_a-testem_slides.html" target="_blank">A testem</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/hu/0120_haj_slides.html" target="_blank">Haj</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/hu/0129_a-lusta-kistestvér_slides.html" target="_blank">A lusta kistestvér</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -6439,7 +6463,7 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nb0008">nb</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#hu0008">hu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nb0008">nb</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -6565,7 +6589,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ja0087">ja</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#hu0087">hu</a>, <a href="#it0087">it</a>, <a href="#ja0087">ja</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -6631,7 +6655,7 @@
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#hi0120">hi</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#hi0120">hi</a>, <a href="#hu0120">hu</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
@@ -6667,7 +6691,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#hu0129">hu</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
